<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="200dp"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/darkBlue" >

        <ImageView
            android:id="@+id/profilePhoto"
            android:layout_height="150dp"
            android:layout_width="150dp"
            android:src="@drawable/circle_show_form_activity"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:weightSum="100"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">



        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_height="wrap_content"
                android:text="@string/nameHint" />

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_weight="70"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:focusable="false"/>
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/surnameHint" />

            <EditText
                android:id="@+id/surname"
                android:layout_weight="70"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_weight="30"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/idHint" />

            <EditText
                android:id="@+id/idNumber"
                android:layout_weight="70"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:focusable="false"/>
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:id="@+id/phoneCall"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:src="@drawable/ic_call_black_24dp"
                android:clickable="true"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="17"
                android:text="@string/phoneNumberHint" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_weight="73"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:id="@+id/email_send"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:src="@drawable/ic_mail_outline_black_24dp"
                android:clickable="true"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="17"
                android:text="@string/mailAddressHint" />

            <EditText
                android:id="@+id/email_address"
                android:layout_weight="73"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp" />

        </LinearLayout>


        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_weight="30"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/birtdateHint" />

            <EditText
                android:id="@+id/birthDate"
                android:layout_weight="70"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:inputType="text"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_weight="30"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/birthplaceHint" />

            <EditText
                android:id="@+id/birthPlace"
                android:layout_weight="70"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:focusable="false"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>