<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/holo_orange_dark"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    </FrameLayout>

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent" >



        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="65dp">

            <ImageView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/addImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/circle_main_activity"
                android:background="@drawable/add_your_image"
                android:clickable="true"/>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_marginTop="25dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:layout_height="wrap_content"
                    android:text="@string/nameHint" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_weight="70"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"/>
            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:text="@string/surnameHint" />

                <EditText
                    android:id="@+id/surname"
                    android:layout_weight="70"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"/>

            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_weight="30"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/idHint" />

                <EditText
                    android:id="@+id/idNumber"
                    android:layout_weight="70"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"/>
            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/phoneCall"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:src="@drawable/ic_call_black_24dp"
                    android:clickable="false"/>

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="17"
                    android:text="@string/phoneNumberHint" />

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_weight="73"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|phone"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp" />

            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/emailSend"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:src="@drawable/ic_mail_outline_black_24dp"
                    android:clickable="false"/>

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="17"
                    android:text="@string/mailAddressHint" />

                <EditText
                    android:id="@+id/emailAddress"
                    android:layout_weight="73"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp" />

            </LinearLayout>


            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_weight="30"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/birtdateHint" />

                <EditText
                    android:id="@+id/birthDate"
                    android:layout_weight="70"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="text"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_weight="30"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/birthplaceHint" />

                <EditText
                    android:id="@+id/birthPlace"
                    android:layout_weight="70"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"/>
            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_marginTop="25dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="100" >
                <Button
                    android:id="@+id/submitButton"
                    android:text="@string/submitButton"
                    android:layout_weight="45"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"/>

                <Button
                    android:id="@+id/clearButton"
                    android:text="@string/clearButton"
                    android:layout_weight="45"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="@color/drawer_item"
        app:itemTextColor="@color/drawer_item"
        app:itemBackground="@android:color/transparent"/>

</android.support.v4.widget.DrawerLayout>


